samples/_failures_safe/1761442633_0c3f2a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6125d162.c: In function ‘main’:
./samples/SAFE/__tmp_6125d162.c:174:5: error: expected expression at end of input
  174 |     if (len > 0 && input[len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_6125d162.c:174:5: error: expected declaration or statement at end of input
